--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -34,3 +35,15 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+
+Library
+Temp
+obj
+*.pidb
+*.unityproj
+*.sln
+*.userprefs
+*.meta
+*.csproj
+*.suo
+*.DotSettings
