--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ obj
 /Assets/Standard Assets/Skyboxes
 /Assets/Standard Assets/Water (Basic)/Sources/Materials
 /Assets/Standard Assets/Water (Basic)
+/Assets/Add/Cat
+/Assets/Add/FishPointer/Materials
+*.fbx
