--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ obj
 /Assets/Add/Cat
 /Assets/Add/FishPointer/Materials
 *.fbx
+/Assets/Editor/Water (Pro Only)/Water4
+/Assets/Standard Assets/Water (Pro Only)
